--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,5 @@ out/
 .env
 /src/main/resources/application.yml
 /src/main/resources/application-dev.yml
+/src/main/resources/detect-pothole-383906-b2ce4ba60c0f.json
 docker-compose.yml
